third_party/WebKit/Source/WebKit/gtk/WebCoreSupport/FrameLoaderClientGtk.h
@@ -199,6 +199,8 @@ namespace WebKit {
         // Plugin view to redirect data to
         WebCore::PluginView* m_pluginView;
         bool m_hasSentResponseToPlugin;
+
+        virtual void dispatchDidCommitLoad(bool isNavigatingWithinPage);
     };
 
 }
